--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,35 @@
 
     <groupId>nws.dev</groupId>
     <artifactId>7d2d</artifactId>
-    <version>25.05.0601</version>
+    <version>25.05.0901</version>
+
     <build>
-        <finalName>${project.artifactId}-${project.version}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>nws.dev.$7d2d.Main</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                        <phase>package</phase> <!-- bind to the packaging phase -->
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -19,6 +45,12 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>nws.dev</groupId>
+            <artifactId>core</artifactId>
+            <version>25.05.0901</version>
+        </dependency>
+
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
@@ -35,4 +67,5 @@
             <version>5.14.0</version>
         </dependency>
     </dependencies>
+
 </project>
